# embedded-cli-rs

./: .gitignore  Cargo.toml  README.md  demo.sh
.github/workflows/: ci.yml
embedded-cli/: Cargo.toml
embedded-cli-macros/: Cargo.toml
embedded-cli-macros/src/: lib.rs  processor.rs  utils.rs
embedded-cli-macros/src/command/: args.rs  autocomplete.rs  doc.rs  help.rs  mod.rs  model.rs  parse.rs
embedded-cli-macros/src/group/: command_group.rs  mod.rs
embedded-cli/src/: arguments.rs  autocomplete.rs  buffer.rs  builder.rs  cli.rs  codes.rs  command.rs  editor.rs  help.rs  history.rs  input.rs  lib.rs  service.rs  token.rs  utf8.rs  utils.rs  writer.rs
embedded-cli/src/private/: mod.rs
embedded-cli/tests/cli/: autocomplete.rs  autocomplete_disabled.rs  base.rs  defaults.rs  help_simple.rs  help_subcommand.rs  history.rs  history_disabled.rs  main.rs  options.rs  subcommand.rs  terminal.rs  wrapper.rs  writer.rs
examples/arduino/: Cargo.toml  README.md  memory.sh
examples/arduino/.cargo/: config.toml
examples/arduino/src/: main.rs
examples/desktop/: Cargo.toml  README.md
examples/desktop/src/: main.rs
