[package]
name = "embedded-cli-macros"
version = "0.1.0"
authors = ["Sviatoslav Kokurin <kokurinsv@gmail.com>"]
description = """
Macros for embedded-cli lib
"""
repository = "https://github.com/funbiscuit/embedded-cli-rs"
readme = "../README.md"
keywords = ["no_std", "cli", "macro", "embedded"]
license = "MIT OR Apache-2.0"
categories = ["command-line-interface", "embedded", "no-std"]
edition = "2021"

[lib]
proc-macro = true

[features]
default = []

[dependencies]
convert_case = "0.6.0"
darling = "0.20.3"
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.39", features = ["full"] }

[dev-dependencies]
