[package]
name = "embedded-cli"
version = "0.1.1"
authors = ["Sviatoslav Kokurin <kokurinsv@gmail.com>"]
description = """
CLI with autocompletion, help and history for embedded systems (like Arduino or STM32)
"""
repository = "https://github.com/funbiscuit/embedded-cli-rs"
readme = "../README.md"
keywords = ["no_std", "cli", "embedded"]
license = "MIT OR Apache-2.0"
categories = ["command-line-interface", "embedded", "no-std"]
edition = "2021"

[features]
default = ["macros"]

macros = ["embedded-cli-macros"]

[dependencies]
embedded-cli-macros = { version = "0.1.0", path = "../embedded-cli-macros", optional = true }

bitflags = "2.4.1"
embedded-io = "0.6.1"
ufmt = "0.2.0"

[dev-dependencies]
regex = "1.10.2"
rstest = "0.18.2"
