[package]
name = "embedded-cli"
version = "0.2.1"
authors = ["Sviatoslav Kokurin <kokurinsv@gmail.com>"]
description = """
CLI with autocompletion, help and history for embedded systems (like Arduino or STM32)
"""
repository = "https://github.com/funbiscuit/embedded-cli-rs"
readme = "../README.md"
keywords = ["no_std", "cli", "embedded"]
license = "MIT OR Apache-2.0"
categories = ["command-line-interface", "embedded", "no-std"]
edition = "2021"

[features]
default = ["macros", "autocomplete", "help", "history"]

macros = ["embedded-cli-macros"]
autocomplete = ["embedded-cli-macros/autocomplete"]
help = ["embedded-cli-macros/help"]
history = []

[dependencies]
embedded-cli-macros = { version = "0.2.1", path = "../embedded-cli-macros", optional = true }

bitflags = "2.5.0"
embedded-io = "0.6.1"
ufmt = "0.2.0"

[dev-dependencies]
regex = "1.10.4"
rstest = "0.19.0"
